--- a/sdk/python/jobs/pipelines/hod_test_promptflow/test_promptflow.ipynb
+++ b/sdk/python/jobs/pipelines/hod_test_promptflow/test_promptflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,13 +391,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a = {\"a\":1}\n",
-    "print(a.pop(\"b\", None))"
+    "### List flows from index service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully listed runs from index service\n"
+     ]
+    }
+   ],
+   "source": [
+    "index_endpoint_url = endpoint_url.replace(\"/history\", \"/index\")\n",
+    "url = f\"{index_endpoint_url}/entities\"\n",
+    "\n",
+    "payload = {\n",
+    "    \"filters\": [\n",
+    "        {\n",
+    "            \"field\": \"type\",\n",
+    "            \"operator\": \"eq\",\n",
+    "            \"values\": [\"flows\"]\n",
+    "        },\n",
+    "        # {\n",
+    "        #     \"field\": \"annotations/archived\",\n",
+    "        #     \"operator\": \"eq\",\n",
+    "        #     \"values\": [\"true\"]\n",
+    "        # },\n",
+    "        {\n",
+    "            \"field\": \"properties/creationContext/createdBy/userTenantId\",\n",
+    "            \"operator\": \"eq\",\n",
+    "            \"values\": [\"72f988bf-86f1-41af-91ab-2d7cd011db47\"]\n",
+    "        },\n",
+    "        {\n",
+    "            \"field\": \"properties/creationContext/createdBy/userObjectId\",\n",
+    "            \"operator\": \"eq\",\n",
+    "            \"values\": [\"c05e0746-e125-4cb3-9213-a8b535eacd79\"]\n",
+    "        }\n",
+    "    ],\n",
+    "    \"freeTextSearch\": \"\",\n",
+    "    \"order\": [\n",
+    "        {\n",
+    "            \"direction\": \"Desc\",\n",
+    "            \"field\": \"properties/creationContext/createdTime\"\n",
+    "        }\n",
+    "    ],\n",
+    "    # index service can return 100 results at most\n",
+    "    \"pageSize\": 10,\n",
+    "    \"skip\": 0,\n",
+    "    \"includeTotalResultCount\": True,\n",
+    "    \"searchBuilder\": \"AppendPrefix\"\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, json=payload, headers=headers)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    print(f\"Successfully listed runs from index service\")\n",
+    "    with open(\"./flow_list_archived.json\", \"w\") as f:\n",
+    "        json.dump(response.json(), f, indent=4)\n",
+    "else:\n",
+    "    print(f\"Code: {response.status_code}, Reason: {response.text}\")"
    ]
   },
   {
@@ -438,9 +499,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\programs\\azureml-examples\\sdk\\python\\jobs\\pipelines\\hod_test_promptflow\n",
+      "D:/programs/azureml-examples/sdk/python/jobs/pipelines/hod_test_promptflow\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "a = Path(\".\").resolve().absolute()\n",
@@ -490,6 +568,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "none\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(None).lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -512,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.8.18"
   },
   "orig_nbformat": 4,
   "vscode": {
